<resources>
    <string name="app_name">TestProject</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main3">Main3Activity</string>

    <string name="hello_world">Hello Accessory!</string>
    <string name="ConnectionEstablishedMsg">Service Connection with HelloAccessory(P) has been
        established.
    </string>
    <string name="ConnectionTerminateddMsg">Service Connection with HelloAccessory(P) has been
        terminated.
    </string>
    <string name="ConnectionAlreadyExist">Service Connection has already been existed!!!</string>
    <string name="ConnectionAlreadyDisconnected">Service Connection has already been
        disconnected!!!
    </string>
    <string name="ConnectionFailure">Service Connection Failure</string>
    <string name="NoPeersFound">No peers have been found!!!</string>
    <string name="buttonConnect">Connect</string>
    <string name="buttonDisconnect">Disconnect</string>
    <string name="buttonSend">Send</string>

    <string name="action_settings">Settings</string>
    <string name="pref_key_camera_stab_mode">camera_stab_mode</string>
    <string name="pref_key_home_type">home_type</string>
    <string name="pref_key_smoothing_drone_sensors">smoothing_drone_sensors</string>
    <string name="pref_key_smoothing_watch_sensors">smoothing_watch_sensors</string>
    <string name="pref_key_smoothing_phone_sensors">smoothing_phone_sensors</string>
    <string name="pref_key_max_altitude">max_altitude</string>
    <string name="pref_key_max_vert_speed">max_vert_speed</string>
    <string name="pref_key_max_pitch_roll">max_pitch_roll</string>
    <string name="pref_key_max_tilt">max_tilt</string>
    <string name="pref_key_max_rot_speed">max_rot_speed</string>
    <string name="pref_key_ui_roll_limit">ui_roll_limit</string>
    <string name="pref_key_ui_pitch_limit">ui_pitch_limit</string>
    <string name="pref_key_ui_yaw_limit">ui_yaw_limit</string>
    <string name="pref_key_ui_speed_limit">ui_speed_limit</string>
    <string name="pref_key_ui_accel_limit">ui_accel_limit</string>
    <string name="pref_key_ui_altitude_limit">ui_altitude_limit</string>
    <string name="pref_key_ui_vert_speed_limit">ui_vert_speed_limit</string>
    <string name="pref_key_ui_alert_perc">ui_alert_perc</string>
    <string name="pref_key_ui_hectic_alert_perc">ui_hectic_alert_perc</string>
    <string name="title_activity_main6">Main6Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
